IB/mlx4: Disable VLAN stripping for RAW PACKET QPs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16683,6 +16683,7 @@
 	patches.drivers/mlx4-0077-net-mlx4-Add-support-to-get-VF-config.patch
 	patches.drivers/mlx4-0078-mlx4_en-fix-a-build-error-on-32bit-arches.patch
 	patches.drivers/mlx4-0079-mlx4_core-Reduce-warning-message-for-SRQ_LIMIT-event.patch
+	patches.drivers/mlx4-0080-IB-mlx4-Disable-VLAN-stripping-for-RAW-PACKET-QPs.patch
 
 	########################################################
 	# Wireless Networking
