net/mlx4_core: Remove zeroed out of explicit QUERY_FUNC_CAP fields (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16757,6 +16757,7 @@
 	patches.drivers/mlx4-0151-mlx4_en-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/mlx4-0152-mlx4_core-Roll-back-round-robin-bitmap-allocation-co.patch
 	patches.drivers/mlx4-0153-net-mlx4-calls-skb_set_hash.patch
+	patches.drivers/mlx4-0154-net-mlx4_core-Remove-zeroed-out-of-explicit-QUERY_FU.patch
 
 	########################################################
 	# Wireless Networking
