net: mlx4 calls skb_set_hash (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16756,6 +16756,7 @@
 	patches.drivers/mlx4-0150-IB-mlx4-Fix-error-return-code.patch
 	patches.drivers/mlx4-0151-mlx4_en-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/mlx4-0152-mlx4_core-Roll-back-round-robin-bitmap-allocation-co.patch
+	patches.drivers/mlx4-0153-net-mlx4-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
