net/mlx4_core: Use firmware driven flow steering hash mode (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16619,6 +16619,7 @@
 	patches.drivers/mlx4-0013-net-mlx4_en-Fix-vlan-mask-for-ethtool-steering-rules.patch
 	patches.drivers/mlx4-0014-net-mlx4_en-Block-insertion-of-ethtool-steering-rule.patch
 	patches.drivers/mlx4-0015-net-mlx4_en-Fix-ethtool-rules-leftovers-after-module.patch
+	patches.drivers/mlx4-0016-net-mlx4_core-Use-firmware-driven-flow-steering-hash.patch
 
 	########################################################
 	# Wireless Networking
