--- a/series.conf
+++ b/series.conf
@@ -16803,6 +16803,7 @@
 	patches.drivers/mlx4-0197-net-mlx4-Add-utils-for-N-Port-VFs.patch
 	patches.drivers/mlx4-0198-net-mlx4-Adapt-code-for-N-Port-VF.patch
 	patches.drivers/mlx4-0199-net-mlx4-Adapt-num_vfs-probed_vf-params-for-single-p.patch
+	patches.drivers/mlx4-0200-mlx4-Use-actual-number-of-PCI-functions-PF-VFs-for-a.patch
 
 	########################################################
 	# Wireless Networking
