net/mlx4: Add utils for N-Port VFs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16800,6 +16800,7 @@
 	patches.drivers/mlx4-0194-net-mlx4_core-Load-the-IB-driver-when-the-device-sup.patch
 	patches.drivers/mlx4-0195-mlx4-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/mlx4-0196-net-mlx4-Add-data-structures-to-support-N-Ports-per-.patch
+	patches.drivers/mlx4-0197-net-mlx4-Add-utils-for-N-Port-VFs.patch
 
 	########################################################
 	# Wireless Networking
