--- a/series.conf
+++ b/series.conf
@@ -16827,6 +16827,7 @@
 	patches.drivers/mlx4-0221-net-mlx4_core-Fix-smatch-error-possible-access-to-a-.patch
 	patches.drivers/mlx4-0222-net-mlx4_core-Removed-unnecessary-bit-operation-cond.patch
 	patches.drivers/mlx4-0223-net-mlx4_en-Protect-MAC-address-modification-with-th.patch
+	patches.drivers/mlx4-0224-net-mlx4_en-Using-positive-error-value-for-unsigned.patch
 
 	########################################################
 	# Wireless Networking
