--- a/series.conf
+++ b/series.conf
@@ -16812,6 +16812,7 @@
 	patches.drivers/mlx4-0206-net-mlx4_core-Preserve-pci_dev_data-after-__mlx4_rem.patch
 	patches.drivers/mlx4-0207-mlx4_en-don-t-use-napi_synchronize-inside-mlx4_en_ne.patch
 	patches.drivers/mlx4-0208-net-mlx4_core-Adjust-port-number-in-qp_attach-wrappe.patch
+	patches.drivers/mlx4-0209-net-mlx4_core-Load-the-Eth-driver-first.patch
 
 	########################################################
 	# Wireless Networking
