--- a/series.conf
+++ b/series.conf
@@ -16611,6 +16611,7 @@
 	patches.drivers/mlx4-0005-net-mlx4_en-Use-the-correct-netif-lock-on-ndo_set_rx.patch
 	patches.drivers/mlx4-0006-net-mlx4_core-Return-proper-error-code-when-__mlx4_a.patch
 	patches.drivers/mlx4-0007-net-mlx4_en-Fix-a-race-when-closing-TX-queue.patch
+	patches.drivers/mlx4-0008-net-mlx4_en-Initialize-RFS-filters-lock-and-list-in-.patch
 
 	########################################################
 	# Wireless Networking
