net: mlx4: Staticize local functions (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16718,6 +16718,7 @@
 	patches.drivers/mlx4-0112-net-mlx4_en-Fix-BlueFlame-race.patch
 	patches.drivers/mlx4-0113-net-mlx4_core-Respond-to-operation-request-by-firmwa.patch
 	patches.drivers/mlx4-0114-include-Convert-ethernet-mac-address-declarations-to.patch
+	patches.drivers/mlx4-0115-net-mlx4-Staticize-local-functions.patch
 
 	########################################################
 	# Wireless Networking
