net/mlx4_core: Fix smatch error - possible access to a null variable (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16824,6 +16824,7 @@
 	patches.drivers/mlx4-0218-net-mlx4_core-Enforce-irq-affinity-changes-immediatl.patch
 	patches.drivers/mlx4-0219-net-mlx4_en-User-prio-mapping-gets-corrupted-when-ch.patch
 	patches.drivers/mlx4-0220-net-mlx4_en-Fix-errors-in-MAC-address-changing-when-.patch
+	patches.drivers/mlx4-0221-net-mlx4_core-Fix-smatch-error-possible-access-to-a-.patch
 
 	########################################################
 	# Wireless Networking
