--- a/series.conf
+++ b/series.conf
@@ -16788,6 +16788,7 @@
 	patches.drivers/mlx4-0182-net-mlx4_en-Move-queue-stopped-waked-counters-to-be-.patch
 	patches.drivers/mlx4-0183-net-mlx4-Replace-mlx4_en_mac_to_u64-with-mlx4_mac_to.patch
 	patches.drivers/mlx4-0184-net-mlx4_en-Fix-selftest-failing-on-non-10G-link-spe.patch
+	patches.drivers/mlx4-0185-net-mlx4_core-Fix-sparse-warning.patch
 
 	########################################################
 	# Wireless Networking
