net/mlx4_core: Turn off device-managed FS bit in dev-cap wrapper if DMFS is not enabled (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16647,6 +16647,7 @@
 	patches.drivers/mlx4-0041-mlx4_en-fix-allocation-of-device-tx_cq.patch
 	patches.drivers/mlx4-0042-mlx4_en-fix-allocation-of-CPU-affinity-reverse-map.patch
 	patches.drivers/mlx4-0043-net-mlx4_core-Disable-mlx4_QP_ATTACH-calls-from-gues.patch
+	patches.drivers/mlx4-0044-net-mlx4_core-Turn-off-device-managed-FS-bit-in-dev-.patch
 
 	########################################################
 	# Wireless Networking
