net/mlx4_core: Load higher level modules according to ports type (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16730,6 +16730,7 @@
 	patches.drivers/mlx4-0124-net-mlx4-Clean-the-code-to-eliminate-trivial-build-w.patch
 	patches.drivers/mlx4-0125-net-mlx4-Fix-typo-move-similar-defs-to-same-location.patch
 	patches.drivers/mlx4-0126-net-mlx4-Unused-local-variable-in-mlx4_opreq_action.patch
+	patches.drivers/mlx4-0127-net-mlx4_core-Load-higher-level-modules-according-to.patch
 
 	########################################################
 	# Wireless Networking
