net/mlx4: use one page fragment per incoming frame (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16697,6 +16697,7 @@
 	patches.drivers/mlx4-0091-net-mlx4_core-Keep-VF-assigned-MAC-in-the-PF-admin-t.patch
 	patches.drivers/mlx4-0092-net-mlx_en-Timestamping-is-not-supported-in-slave-mo.patch
 	patches.drivers/mlx4-0093-treewide-Fix-typo-in-printk.patch
+	patches.drivers/mlx4-0094-net-mlx4-use-one-page-fragment-per-incoming-frame.patch
 
 	########################################################
 	# Wireless Networking
