mlx4_core: Change a few DMFS fields names to match firmare spec (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16687,6 +16687,7 @@
 	patches.drivers/mlx4-0081-IB-mlx4-Set-link-type-for-RAW-PACKET-QPs-in-the-QP-c.patch
 	patches.drivers/mlx4-0082-mlx4_core-Move-DMFS-HW-structs-to-common-header-file.patch
 	patches.drivers/mlx4-0083-mlx4-Match-DMFS-promiscuous-field-names-to-firmware-.patch
+	patches.drivers/mlx4-0084-mlx4_core-Change-a-few-DMFS-fields-names-to-match-fi.patch
 
 	########################################################
 	# Wireless Networking
