net/mlx4_en: Fix ip/udp steering rules multicast mac when attached via ethtool (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16614,6 +16614,7 @@
 	patches.drivers/mlx4-0008-net-mlx4_en-Initialize-RFS-filters-lock-and-list-in-.patch
 	patches.drivers/mlx4-0009-net-mlx4_core-Directly-expose-fields-of-HW-flow-stee.patch
 	patches.drivers/mlx4-0010-net-mlx4_core-Set-correctly-allow_loopback-flag.patch
+	patches.drivers/mlx4-0011-net-mlx4_en-Fix-ip-udp-steering-rules-multicast-mac-.patch
 
 	########################################################
 	# Wireless Networking
