net/mlx4_core: Added proper description for two device capabilities (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16662,6 +16662,7 @@
 	patches.drivers/mlx4-0056-mlx4-Remove-driver-specific-fdb-handlers.patch
 	patches.drivers/mlx4-0057-drivers-net-Remove-unnecessary-OOM-messages-after-ne.patch
 	patches.drivers/mlx4-0058-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
+	patches.drivers/mlx4-0059-net-mlx4_core-Added-proper-description-for-two-devic.patch
 
 	########################################################
 	# Wireless Networking
