--- a/series.conf
+++ b/series.conf
@@ -16617,6 +16617,7 @@
 	patches.drivers/mlx4-0011-net-mlx4_en-Fix-ip-udp-steering-rules-multicast-mac-.patch
 	patches.drivers/mlx4-0012-net-mlx4_en-Validate-VLAN-IDs-provided-in-ethtool-fl.patch
 	patches.drivers/mlx4-0013-net-mlx4_en-Fix-vlan-mask-for-ethtool-steering-rules.patch
+	patches.drivers/mlx4-0014-net-mlx4_en-Block-insertion-of-ethtool-steering-rule.patch
 
 	########################################################
 	# Wireless Networking
