net/mlx4_en: Use vlan id instead of vlan index for unregistration (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16734,6 +16734,7 @@
 	patches.drivers/mlx4-0128-net-mlx4_core-Fix-call-to-__mlx4_unregister_mac.patch
 	patches.drivers/mlx4-0129-net-mlx4_core-Fix-register-unreg-vlan-flow.patch
 	patches.drivers/mlx4-0130-net-mlx4_core-Fix-reg-unreg-vlan-mac-to-conform-to-t.patch
+	patches.drivers/mlx4-0131-net-mlx4_en-Use-vlan-id-instead-of-vlan-index-for-un.patch
 
 	########################################################
 	# Wireless Networking
