--- a/series.conf
+++ b/series.conf
@@ -16622,6 +16622,7 @@
 	patches.drivers/mlx4-0016-net-mlx4_core-Use-firmware-driven-flow-steering-hash.patch
 	patches.drivers/mlx4-0017-net-mlx4_en-Don-t-reassign-port-mac-address-on-firmw.patch
 	patches.drivers/mlx4-0018-net-mlx4_en-Fix-transmit-timeout-when-driver-restart.patch
+	patches.drivers/mlx4-0019-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 
 	########################################################
 	# Wireless Networking
