--- a/series.conf
+++ b/series.conf
@@ -16841,6 +16841,7 @@
 	patches.drivers/mlx4-0235-net-mlx4_en-Fix-set-port-ratelimit-for-40GE.patch
 	patches.drivers/mlx4-0236-net-mlx4_en-Run-loopback-test-only-when-port-is-up.patch
 	patches.drivers/mlx4-0237-net-mlx4-Verify-port-number-in-__mlx4_unregister_mac.patch
+	patches.drivers/mlx4-0238-net-mlx4_en-Do-not-disable-vlan-filter-during-promis.patch
 
 	########################################################
 	# Wireless Networking
