net/mlx4_en: Fix compilation error when CONFIG_INET isn't defined (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16624,6 +16624,7 @@
 	patches.drivers/mlx4-0018-net-mlx4_en-Fix-transmit-timeout-when-driver-restart.patch
 	patches.drivers/mlx4-0019-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/mlx4-0020-net-mlx4_en-Fix-error-propagation-for-ethtool-helper.patch
+	patches.drivers/mlx4-0021-net-mlx4_en-Fix-compilation-error-when-CONFIG_INET-i.patch
 
 	########################################################
 	# Wireless Networking
