--- a/series.conf
+++ b/series.conf
@@ -16753,6 +16753,7 @@
 	patches.drivers/mlx4-0147-IB-mlx4-Fix-device-max-capabilities-check.patch
 	patches.drivers/mlx4-0148-net-mlx4_en-Remove-selftest-TX-queues-empty-conditio.patch
 	patches.drivers/mlx4-0149-net-mlx4_core-destroy-workqueue-when-driver-fails-to.patch
+	patches.drivers/mlx4-0150-IB-mlx4-Fix-error-return-code.patch
 
 	########################################################
 	# Wireless Networking
