IB/mlx4: Use default pkey when creating tunnel QPs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16711,6 +16711,7 @@
 	patches.drivers/mlx4-0105-net-mlx4_core-Fail-device-init-if-num_vfs-is-negativ.patch
 	patches.drivers/mlx4-0106-net-mlx4_core-Dynamic-VST-to-VST-vlan-qos-changes.patch
 	patches.drivers/mlx4-0107-net-mlx4-fix-small-memory-leak-on-error.patch
+	patches.drivers/mlx4-0108-IB-mlx4-Use-default-pkey-when-creating-tunnel-QPs.patch
 
 	########################################################
 	# Wireless Networking
