--- a/series.conf
+++ b/series.conf
@@ -16798,6 +16798,7 @@
 	patches.drivers/mlx4-0192-net-mlx4_core-Fix-memory-access-error-in-mlx4_QUERY_.patch
 	patches.drivers/mlx4-0193-net-mlx4_core-Fix-wrong-dump-of-the-vxlan-offloads-d.patch
 	patches.drivers/mlx4-0194-net-mlx4_core-Load-the-IB-driver-when-the-device-sup.patch
+	patches.drivers/mlx4-0195-mlx4-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	########################################################
 	# Wireless Networking
