net/mlx4_en: Implement ndo fdb functionality (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16631,6 +16631,7 @@
 	patches.drivers/mlx4-0025-net-mlx4-Move-Ethernet-related-functionality-from-ml.patch
 	patches.drivers/mlx4-0026-net-mlx4_en-Save-previous-MAC-address-of-the-port-so.patch
 	patches.drivers/mlx4-0027-net-mlx4_en-Manage-hash-of-MAC-addresses-per-port.patch
+	patches.drivers/mlx4-0028-net-mlx4_en-Implement-ndo-fdb-functionality.patch
 
 	########################################################
 	# Wireless Networking
