mlx4: allow order-0 memory allocations in RX path (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16699,6 +16699,7 @@
 	patches.drivers/mlx4-0093-treewide-Fix-typo-in-printk.patch
 	patches.drivers/mlx4-0094-net-mlx4-use-one-page-fragment-per-incoming-frame.patch
 	patches.drivers/mlx4-0095-mlx4-use-__netdev_pick_tx-instead-of-__skb_tx_hash-i.patch
+	patches.drivers/mlx4-0096-mlx4-allow-order-0-memory-allocations-in-RX-path.patch
 
 	########################################################
 	# Wireless Networking
