net/mlx4_en: Fix set port ratelimit for 40GE (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16838,6 +16838,7 @@
 	patches.fixes/cpumask-Utility-function-to-set-n-th-cpu-local-cpu-f.patch
 	patches.drivers/mlx4-0233-net-mlx4_en-Use-affinity-hint.patch
 	patches.drivers/mlx4-0234-net-mlx4_core-Fix-the-error-flow-when-probing-with-i.patch
+	patches.drivers/mlx4-0235-net-mlx4_en-Fix-set-port-ratelimit-for-40GE.patch
 
 	########################################################
 	# Wireless Networking
