net/mlx4_en: Avoid false sharing in mlx4_en_en_process_tx_cq() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16889,6 +16889,7 @@
 	patches.drivers/mlx4-0283-net-mlx4_en-tx_info-allocated-with-kmalloc-instead-o.patch
 	patches.drivers/mlx4-0284-net-mlx4_en-Avoid-a-cache-line-miss-in-TX-completion.patch
 	patches.drivers/mlx4-0285-net-mlx4_en-Use-prefetch-in-tx-path.patch
+	patches.drivers/mlx4-0286-net-mlx4_en-Avoid-false-sharing-in-mlx4_en_en_proces.patch
 
 	########################################################
 	# Wireless Networking
