--- a/series.conf
+++ b/series.conf
@@ -16894,6 +16894,7 @@
 	patches.drivers/mlx4-0288-net-mlx4_en-Use-local-var-in-tx-flow-for-skb_shinfo-.patch
 	patches.drivers/mlx4-0289-net-mlx4_en-Use-local-var-for-skb_headlen-skb.patch
 	patches.drivers/mlx4-0290-net-mlx4_en-tx_info-ts_requested-was-not-cleared.patch
+	patches.drivers/mlx4-0291-net-mlx4_en-Enable-the-compiler-to-make-is_inline-in.patch
 
 	########################################################
 	# Wireless Networking
