net/mlx4_en: Fix vlan mask for ethtool steering rules (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16616,6 +16616,7 @@
 	patches.drivers/mlx4-0010-net-mlx4_core-Set-correctly-allow_loopback-flag.patch
 	patches.drivers/mlx4-0011-net-mlx4_en-Fix-ip-udp-steering-rules-multicast-mac-.patch
 	patches.drivers/mlx4-0012-net-mlx4_en-Validate-VLAN-IDs-provided-in-ethtool-fl.patch
+	patches.drivers/mlx4-0013-net-mlx4_en-Fix-vlan-mask-for-ethtool-steering-rules.patch
 
 	########################################################
 	# Wireless Networking
