net/mlx4_core: Deprecate use_prio module parameter (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16830,6 +16830,7 @@
 	patches.drivers/mlx4-0224-net-mlx4_en-Using-positive-error-value-for-unsigned.patch
 	patches.drivers/mlx4-0225-net-mlx4_core-Fix-inaccurate-return-value-of-mlx4_fl.patch
 	patches.drivers/mlx4-0226-net-mlx4_en-Fix-uninitialized-use-of-port_up-in-mlx4.patch
+	patches.drivers/mlx4-0227-net-mlx4_core-Deprecate-use_prio-module-parameter.patch
 
 	########################################################
 	# Wireless Networking
