net/mlx4_en: Use union for BlueFlame WQE (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16789,6 +16789,7 @@
 	patches.drivers/mlx4-0183-net-mlx4-Replace-mlx4_en_mac_to_u64-with-mlx4_mac_to.patch
 	patches.drivers/mlx4-0184-net-mlx4_en-Fix-selftest-failing-on-non-10G-link-spe.patch
 	patches.drivers/mlx4-0185-net-mlx4_core-Fix-sparse-warning.patch
+	patches.drivers/mlx4-0186-net-mlx4_en-Use-union-for-BlueFlame-WQE.patch
 
 	########################################################
 	# Wireless Networking
