--- a/series.conf
+++ b/series.conf
@@ -16831,6 +16831,7 @@
 	patches.drivers/mlx4-0225-net-mlx4_core-Fix-inaccurate-return-value-of-mlx4_fl.patch
 	patches.drivers/mlx4-0226-net-mlx4_en-Fix-uninitialized-use-of-port_up-in-mlx4.patch
 	patches.drivers/mlx4-0227-net-mlx4_core-Deprecate-use_prio-module-parameter.patch
+	patches.drivers/mlx4-0228-net-mlx4_core-Replace-pr_warning-with-pr_warn.patch
 
 	########################################################
 	# Wireless Networking
