cpumask: Utility function to set n'th cpu - local cpu first (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16835,6 +16835,7 @@
 	patches.drivers/mlx4-0229-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/mlx4-0230-net-mlx4_core-Fix-SRIOV-free-pool-management-when-en.patch
 	patches.drivers/mlx4-0231-net-mlx4_core-Keep-only-one-driver-entry-release-mlx.patch
+	patches.fixes/cpumask-Utility-function-to-set-n-th-cpu-local-cpu-f.patch
 
 	########################################################
 	# Wireless Networking
