--- a/series.conf
+++ b/series.conf
@@ -16874,6 +16874,7 @@
 	patches.drivers/mlx4-0268-net-mlx4-Use-is_kdump_kernel-to-detect-kdump-kernel.patch
 	patches.drivers/mlx4-0269-mlx4_en-Convert-the-normal-skb-free-path-to-dev_cons.patch
 	patches.drivers/mlx4-0270-net-mlx4_core-Enable-CQE-EQE-stride-support.patch
+	patches.drivers/mlx4-0271-net-mlx4_core-Cache-line-EQE-size-support.patch
 
 	########################################################
 	# Wireless Networking
