net/mlx4_en: Fix adaptive moderation cq update (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16692,6 +16692,7 @@
 	patches.drivers/mlx4-0086-mlx4_core-Expose-a-few-helpers-to-fill-DMFS-HW-struc.patch
 	patches.drivers/mlx4-0087-net-mlx4_core-Add-missing-report-on-VST-and-spoof-ch.patch
 	patches.drivers/mlx4-0088-net-mlx4-Strengthen-VLAN-tags-priorities-enforcement.patch
+	patches.drivers/mlx4-0089-net-mlx4_en-Fix-adaptive-moderation-cq-update.patch
 
 	########################################################
 	# Wireless Networking
