--- a/series.conf
+++ b/series.conf
@@ -16746,6 +16746,7 @@
 	patches.drivers/mlx4-0140-net-mlx4_core-Initialize-all-mailbox-buffers-to-zero.patch
 	patches.drivers/mlx4-0141-net-mlx4_core-Add-immediate-activate-for-VGT-VST-VGT.patch
 	patches.drivers/mlx4-0142-net-mlx4_en-Datapath-resources-allocated-dynamically.patch
+	patches.drivers/mlx4-0143-net-mlx4_core-ICM-pages-are-allocated-on-device-NUMA.patch
 
 	########################################################
 	# Wireless Networking
