net/mlx4_core: Don't issue PCIe speed/width checks for VFs (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16813,6 +16813,7 @@
 	patches.drivers/mlx4-0207-mlx4_en-don-t-use-napi_synchronize-inside-mlx4_en_ne.patch
 	patches.drivers/mlx4-0208-net-mlx4_core-Adjust-port-number-in-qp_attach-wrappe.patch
 	patches.drivers/mlx4-0209-net-mlx4_core-Load-the-Eth-driver-first.patch
+	patches.drivers/mlx4-0210-net-mlx4_core-Don-t-issue-PCIe-speed-width-checks-fo.patch
 
 	########################################################
 	# Wireless Networking
