--- a/series.conf
+++ b/series.conf
@@ -16732,6 +16732,7 @@
 	patches.drivers/mlx4-0126-net-mlx4-Unused-local-variable-in-mlx4_opreq_action.patch
 	patches.drivers/mlx4-0127-net-mlx4_core-Load-higher-level-modules-according-to.patch
 	patches.drivers/mlx4-0128-net-mlx4_core-Fix-call-to-__mlx4_unregister_mac.patch
+	patches.drivers/mlx4-0129-net-mlx4_core-Fix-register-unreg-vlan-flow.patch
 
 	########################################################
 	# Wireless Networking
