--- a/series.conf
+++ b/series.conf
@@ -16671,6 +16671,7 @@
 	patches.drivers/mlx4-0065-net-mlx4_core-Add-timestamping-device-capability.patch
 	patches.drivers/mlx4-0066-net-mlx4_core-Read-HCA-frequency-and-map-internal-cl.patch
 	patches.drivers/mlx4-0067-net-mlx4_en-Add-HW-timestamping-TS-support.patch
+	patches.drivers/mlx4-0068-net-mlx4_en-Support-software-timestamping.patch
 
 	########################################################
 	# Wireless Networking
