nick kvfree() from apparmor (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16885,6 +16885,7 @@
 	patches.drivers/mlx4-0279-net-mlx4_en-Align-tx-path-structures-to-cache-lines.patch
 	patches.drivers/mlx4-0280-net-mlx4_en-Avoid-calling-bswap-in-tx-fast-path.patch
 	patches.fixes/apparmor-no-need-to-delay-vfree.patch
+	patches.fixes/nick-kvfree-from-apparmor.patch
 
 	########################################################
 	# Wireless Networking
