mlx4_core: Add support for secure-host and SMP firewall (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16858,6 +16858,7 @@
 	patches.drivers/mlx4-0252-net-mlx4_core-Use-low-memory-profile-on-kdump-kernel.patch
 	patches.drivers/mlx4-0253-net-mlx4_en-Reduce-memory-consumption-on-kdump-kerne.patch
 	patches.drivers/mlx4-0254-net-mlx4_en-mlx4_en_-gs-et_priv_flags-can-be-static.patch
+	patches.drivers/mlx4-0255-mlx4_core-Add-support-for-secure-host-and-SMP-firewa.patch
 
 	########################################################
 	# Wireless Networking
