--- a/series.conf
+++ b/series.conf
@@ -16733,6 +16733,7 @@
 	patches.drivers/mlx4-0127-net-mlx4_core-Load-higher-level-modules-according-to.patch
 	patches.drivers/mlx4-0128-net-mlx4_core-Fix-call-to-__mlx4_unregister_mac.patch
 	patches.drivers/mlx4-0129-net-mlx4_core-Fix-register-unreg-vlan-flow.patch
+	patches.drivers/mlx4-0130-net-mlx4_core-Fix-reg-unreg-vlan-mac-to-conform-to-t.patch
 
 	########################################################
 	# Wireless Networking
