net/mlx4_core: Return proper error code when __mlx4_add_one fails (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16609,6 +16609,7 @@
 	patches.drivers/mlx4-0003-net-mlx4_en-Issue-the-dump-eth-statistics-command-un.patch
 	patches.drivers/mlx4-0004-net-mlx4_en-Fix-traffic-loss-under-promiscuous-mode.patch
 	patches.drivers/mlx4-0005-net-mlx4_en-Use-the-correct-netif-lock-on-ndo_set_rx.patch
+	patches.drivers/mlx4-0006-net-mlx4_core-Return-proper-error-code-when-__mlx4_a.patch
 
 	########################################################
 	# Wireless Networking
