--- a/series.conf
+++ b/series.conf
@@ -16774,6 +16774,7 @@
 	patches.drivers/mlx4-0168-mlx4_en-Select-PTP_1588_CLOCK.patch
 	patches.drivers/mlx4-0169-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/mlx4-0170-net-mlx4_core-clean-up-cq_res_start_move_to.patch
+	patches.drivers/mlx4-0171-net-mlx4_core-clean-up-srq_res_start_move_to.patch
 
 	########################################################
 	# Wireless Networking
