--- a/series.conf
+++ b/series.conf
@@ -16860,6 +16860,7 @@
 	patches.drivers/mlx4-0254-net-mlx4_en-mlx4_en_-gs-et_priv_flags-can-be-static.patch
 	patches.drivers/mlx4-0255-mlx4_core-Add-support-for-secure-host-and-SMP-firewa.patch
 	patches.drivers/mlx4-0256-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/mlx4-0257-net-mlx4_en-do-not-ignore-autoneg-in-mlx4_en_set_pau.patch
 
 	########################################################
 	# Wireless Networking
