--- a/series.conf
+++ b/series.conf
@@ -16641,6 +16641,7 @@
 	patches.drivers/mlx4-0035-mlx4_core-Rename-MPT-related-functions-to-have-mpt_-.patch
 	patches.drivers/mlx4-0036-mlx4_core-Propagate-MR-deregistration-failures-to-ca.patch
 	patches.drivers/mlx4-0037-IB-mlx4-Convert-is_xxx-variables-in-build_mlx_header.patch
+	patches.drivers/mlx4-0038-IB-mlx4-Fix-compiler-warning-about-uninitialized-vla.patch
 
 	########################################################
 	# Wireless Networking
