--- a/series.conf
+++ b/series.conf
@@ -16621,6 +16621,7 @@
 	patches.drivers/mlx4-0015-net-mlx4_en-Fix-ethtool-rules-leftovers-after-module.patch
 	patches.drivers/mlx4-0016-net-mlx4_core-Use-firmware-driven-flow-steering-hash.patch
 	patches.drivers/mlx4-0017-net-mlx4_en-Don-t-reassign-port-mac-address-on-firmw.patch
+	patches.drivers/mlx4-0018-net-mlx4_en-Fix-transmit-timeout-when-driver-restart.patch
 
 	########################################################
 	# Wireless Networking
