net/mlx4_core: Call synchronize_irq() before freeing EQ buffer (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16898,6 +16898,7 @@
 	patches.drivers/mlx4-0292-net-mlx4_en-remove-NETDEV_TX_BUSY.patch
 	patches.drivers/mlx4-0293-net-add-netdev_txq_bql_-enqueue-complete-_prefetchw-.patch
 	patches.drivers/mlx4-0294-mlx4-fix-race-accessing-page-_count.patch
+	patches.drivers/mlx4-0295-net-mlx4_core-Call-synchronize_irq-before-freeing-EQ.patch
 
 	########################################################
 	# Wireless Networking
