net/mlx4: Add reference counting to MAC registeration (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16675,6 +16675,7 @@
 	patches.drivers/mlx4-0069-net-mlx4_en-Add-a-service-task.patch
 	patches.drivers/mlx4-0070-net-mlx4_core-Disable-HW-timestamping-for-VFs.patch
 	patches.drivers/mlx4-0071-net-mlx4_en-Disable-HW-clock-overflow-check-when-no-.patch
+	patches.drivers/mlx4-0072-net-mlx4-Add-reference-counting-to-MAC-registeration.patch
 
 	########################################################
 	# Wireless Networking
