net/mlx4: Add set VF mac address support (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16677,6 +16677,7 @@
 	patches.drivers/mlx4-0071-net-mlx4_en-Disable-HW-clock-overflow-check-when-no-.patch
 	patches.drivers/mlx4-0072-net-mlx4-Add-reference-counting-to-MAC-registeration.patch
 	patches.drivers/mlx4-0073-net-mlx4-Add-structures-to-keep-VF-Ethernet-ports-in.patch
+	patches.drivers/mlx4-0074-net-mlx4-Add-set-VF-mac-address-support.patch
 
 	########################################################
 	# Wireless Networking
