net/mlx4_en: Add mlx4_en_get_cqe helper (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16875,6 +16875,7 @@
 	patches.drivers/mlx4-0269-mlx4_en-Convert-the-normal-skb-free-path-to-dev_cons.patch
 	patches.drivers/mlx4-0270-net-mlx4_core-Enable-CQE-EQE-stride-support.patch
 	patches.drivers/mlx4-0271-net-mlx4_core-Cache-line-EQE-size-support.patch
+	patches.drivers/mlx4-0272-net-mlx4_en-Add-mlx4_en_get_cqe-helper.patch
 
 	########################################################
 	# Wireless Networking
