net/mlx4_core: Don't fail reg/unreg vlan for older guests (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16736,6 +16736,7 @@
 	patches.drivers/mlx4-0130-net-mlx4_core-Fix-reg-unreg-vlan-mac-to-conform-to-t.patch
 	patches.drivers/mlx4-0131-net-mlx4_en-Use-vlan-id-instead-of-vlan-index-for-un.patch
 	patches.drivers/mlx4-0132-net-mlx4_core-Resource-tracker-for-reg-unreg-vlans.patch
+	patches.drivers/mlx4-0133-net-mlx4_core-Don-t-fail-reg-unreg-vlan-for-older-gu.patch
 
 	########################################################
 	# Wireless Networking
