--- a/series.conf
+++ b/series.conf
@@ -16653,6 +16653,7 @@
 	patches.drivers/mlx4-0047-net-mlx4_en-Cleanup-MAC-resources-on-module-unload-o.patch
 	patches.drivers/mlx4-0048-net-mlx4_en-Disable-RFS-when-running-in-SRIOV-mode.patch
 	patches.drivers/mlx4-0049-mlx4-remove-leftover-idr_pre_get-call.patch
+	patches.drivers/mlx4-0050-net-mlx4_core-Fix-wrong-mask-applied-on-EQ-numbers-i.patch
 
 	########################################################
 	# Wireless Networking
