--- a/series.conf
+++ b/series.conf
@@ -16695,6 +16695,7 @@
 	patches.drivers/mlx4-0089-net-mlx4_en-Fix-adaptive-moderation-cq-update.patch
 	patches.drivers/mlx4-0090-net-mlx4_en-Handle-unassigned-VF-MAC-address-correct.patch
 	patches.drivers/mlx4-0091-net-mlx4_core-Keep-VF-assigned-MAC-in-the-PF-admin-t.patch
+	patches.drivers/mlx4-0092-net-mlx_en-Timestamping-is-not-supported-in-slave-mo.patch
 
 	########################################################
 	# Wireless Networking
