net/mlx4_core: Keep VF assigned MAC in the PF admin table (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16694,6 +16694,7 @@
 	patches.drivers/mlx4-0088-net-mlx4-Strengthen-VLAN-tags-priorities-enforcement.patch
 	patches.drivers/mlx4-0089-net-mlx4_en-Fix-adaptive-moderation-cq-update.patch
 	patches.drivers/mlx4-0090-net-mlx4_en-Handle-unassigned-VF-MAC-address-correct.patch
+	patches.drivers/mlx4-0091-net-mlx4_core-Keep-VF-assigned-MAC-in-the-PF-admin-t.patch
 
 	########################################################
 	# Wireless Networking
