net/mlx4_core: Directly expose fields of HW flow steering rule control segment (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16612,6 +16612,7 @@
 	patches.drivers/mlx4-0006-net-mlx4_core-Return-proper-error-code-when-__mlx4_a.patch
 	patches.drivers/mlx4-0007-net-mlx4_en-Fix-a-race-when-closing-TX-queue.patch
 	patches.drivers/mlx4-0008-net-mlx4_en-Initialize-RFS-filters-lock-and-list-in-.patch
+	patches.drivers/mlx4-0009-net-mlx4_core-Directly-expose-fields-of-HW-flow-stee.patch
 
 	########################################################
 	# Wireless Networking
