--- a/series.conf
+++ b/series.conf
@@ -16846,6 +16846,7 @@
 	patches.drivers/mlx4-0240-net-mlx4_en-Fix-mac_hash-database-inconsistency.patch
 	patches.drivers/mlx4-0241-net-mlx4_en-Don-t-use-irq_affinity_notifier-to-track.patch
 	patches.drivers/mlx4-0242-net-mlx4_en-IRQ-affinity-hint-is-not-cleared-on-port.patch
+	patches.drivers/mlx4-0243-net-mlx4_en-Ignore-budget-on-TX-napi-polling.patch
 
 	########################################################
 	# Wireless Networking
