IB/mlx4: Adjust duplicate test (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16636,6 +16636,7 @@
 	patches.drivers/mlx4-0030-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 	patches.drivers/mlx4-0031-treewide-Replace-incomming-with-incoming-in-all-comm.patch
 	patches.drivers/mlx4-0032-IB-mlx4-Fix-bug-unwinding-on-error-in-mlx4_ib_init_s.patch
+	patches.drivers/mlx4-0033-IB-mlx4-Adjust-duplicate-test.patch
 
 	########################################################
 	# Wireless Networking
