mlx4_en: Only cycle port if HW timestamp config changes (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16768,6 +16768,7 @@
 	patches.drivers/mlx4-0162-net-mlx4_core-Check-port-number-for-validity-before-.patch
 	patches.drivers/mlx4-0163-net-mlx4-slight-optimization-of-addr-compare.patch
 	patches.drivers/mlx4-0164-mlx4_en-Add-PTP-hardware-clock.patch
+	patches.drivers/mlx4-0165-mlx4_en-Only-cycle-port-if-HW-timestamp-config-chang.patch
 
 	########################################################
 	# Wireless Networking
