mlx4_en: fix allocation of CPU affinity reverse-map (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16645,6 +16645,7 @@
 	patches.drivers/mlx4-0039-IB-mlx4-Remove-redundant-NULL-check-before-kfree.patch
 	patches.drivers/mlx4-0040-mlx4_core-Disable-memory-windows-for-virtual-functio.patch
 	patches.drivers/mlx4-0041-mlx4_en-fix-allocation-of-device-tx_cq.patch
+	patches.drivers/mlx4-0042-mlx4_en-fix-allocation-of-CPU-affinity-reverse-map.patch
 
 	########################################################
 	# Wireless Networking
