net/mlx4_en: tx_info allocated with kmalloc() instead of vmalloc() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16886,6 +16886,7 @@
 	patches.drivers/mlx4-0280-net-mlx4_en-Avoid-calling-bswap-in-tx-fast-path.patch
 	patches.fixes/apparmor-no-need-to-delay-vfree.patch
 	patches.fixes/nick-kvfree-from-apparmor.patch
+	patches.drivers/mlx4-0283-net-mlx4_en-tx_info-allocated-with-kmalloc-instead-o.patch
 
 	########################################################
 	# Wireless Networking
