net/mlx4_core: Initialize all mailbox buffers to zero before use (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16743,6 +16743,7 @@
 	patches.drivers/mlx4-0137-net-mlx4_core-Implement-resource-quota-enforcement.patch
 	patches.drivers/mlx4-0138-net-mlx4_en-Fixed-crash-when-port-type-is-changed.patch
 	patches.drivers/mlx4-0139-net-mlx4_en-Add-RFS-support-in-UDP.patch
+	patches.drivers/mlx4-0140-net-mlx4_core-Initialize-all-mailbox-buffers-to-zero.patch
 
 	########################################################
 	# Wireless Networking
