--- a/series.conf
+++ b/series.conf
@@ -16741,6 +16741,7 @@
 	patches.drivers/mlx4-0135-mlx4-Structures-and-init-teardown-for-VF-resource-qu.patch
 	patches.drivers/mlx4-0136-net-mlx4_core-Fix-quota-handling-in-the-QUERY_FUNC_C.patch
 	patches.drivers/mlx4-0137-net-mlx4_core-Implement-resource-quota-enforcement.patch
+	patches.drivers/mlx4-0138-net-mlx4_en-Fixed-crash-when-port-type-is-changed.patch
 
 	########################################################
 	# Wireless Networking
