net/mlx4_core: Fix quota handling in the QUERY_FUNC_CAP wrapper (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16739,6 +16739,7 @@
 	patches.drivers/mlx4-0133-net-mlx4_core-Don-t-fail-reg-unreg-vlan-for-older-gu.patch
 	patches.drivers/mlx4-0134-net-mlx4_core-Fix-checking-order-in-MR-table-init.patch
 	patches.drivers/mlx4-0135-mlx4-Structures-and-init-teardown-for-VF-resource-qu.patch
+	patches.drivers/mlx4-0136-net-mlx4_core-Fix-quota-handling-in-the-QUERY_FUNC_C.patch
 
 	########################################################
 	# Wireless Networking
