net/mlx4_core: Enable CQE/EQE stride support (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16873,6 +16873,7 @@
 	patches.drivers/mlx4-0267-treewide-fix-errors-in-printk.patch
 	patches.drivers/mlx4-0268-net-mlx4-Use-is_kdump_kernel-to-detect-kdump-kernel.patch
 	patches.drivers/mlx4-0269-mlx4_en-Convert-the-normal-skb-free-path-to-dev_cons.patch
+	patches.drivers/mlx4-0270-net-mlx4_core-Enable-CQE-EQE-stride-support.patch
 
 	########################################################
 	# Wireless Networking
