--- a/series.conf
+++ b/series.conf
@@ -16778,6 +16778,7 @@
 	patches.drivers/mlx4-0172-net-mlx4_core-Remove-unnecessary-validation-for-port.patch
 	patches.drivers/mlx4-0173-mlx4-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/mlx4-0174-IB-Report-using-RoCE-IP-based-gids-in-port-caps.patch
+	patches.drivers/mlx4-0175-net-mlx4-Set-number-of-RX-rings-in-a-utility-functio.patch
 
 	########################################################
 	# Wireless Networking
