--- a/series.conf
+++ b/series.conf
@@ -16725,6 +16725,7 @@
 	patches.drivers/mlx4-0119-net-mlx4_en-Fix-handling-of-dma_map-failure.patch
 	patches.drivers/mlx4-0120-net-mlx4_en-Reduce-scope-of-local-variables-in-mlx4_.patch
 	patches.drivers/mlx4-0121-net-mlx4_en-Check-device-state-when-setting-coalesci.patch
+	patches.drivers/mlx4-0122-net-mlx4_en-Rename-name-of-mlx4_en_rx_alloc-members.patch
 
 	########################################################
 	# Wireless Networking
