--- a/series.conf
+++ b/series.conf
@@ -16781,6 +16781,7 @@
 	patches.drivers/mlx4-0175-net-mlx4-Set-number-of-RX-rings-in-a-utility-functio.patch
 	patches.drivers/mlx4-0176-net-mlx4-Fix-limiting-number-of-IRQ-s-instead-of-RSS.patch
 	patches.drivers/mlx4-0177-net-mlx4_en-Expose-port-number-through-sysfs.patch
+	patches.drivers/mlx4-0178-net-mlx4_en-Fix-bad-use-of-dev_id.patch
 
 	########################################################
 	# Wireless Networking
