--- a/series.conf
+++ b/series.conf
@@ -16676,6 +16676,7 @@
 	patches.drivers/mlx4-0070-net-mlx4_core-Disable-HW-timestamping-for-VFs.patch
 	patches.drivers/mlx4-0071-net-mlx4_en-Disable-HW-clock-overflow-check-when-no-.patch
 	patches.drivers/mlx4-0072-net-mlx4-Add-reference-counting-to-MAC-registeration.patch
+	patches.drivers/mlx4-0073-net-mlx4-Add-structures-to-keep-VF-Ethernet-ports-in.patch
 
 	########################################################
 	# Wireless Networking
