--- a/series.conf
+++ b/series.conf
@@ -16629,6 +16629,7 @@
 	patches.drivers/mlx4-0023-net-mlx4_en-Optimize-Rx-fast-path-filter-checks.patch
 	patches.drivers/mlx4-0024-net-mlx4_en-Cleanup-multiline-strings.patch
 	patches.drivers/mlx4-0025-net-mlx4-Move-Ethernet-related-functionality-from-ml.patch
+	patches.drivers/mlx4-0026-net-mlx4_en-Save-previous-MAC-address-of-the-port-so.patch
 
 	########################################################
 	# Wireless Networking
