IB/mlx4: Fix lockdep splat for the iboe lock (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16864,6 +16864,7 @@
 	patches.drivers/mlx4-0258-net-mlx4-Correctly-configure-single-ported-VFs-from-.patch
 	patches.drivers/mlx4-0259-net-mlx4-Use-the-correct-VSD-mask-in-UPDATE_QP.patch
 	patches.drivers/mlx4-0260-IB-mlx4-Disable-TSO-for-Connect-X-rev.-A0-HCAs.patch
+	patches.drivers/mlx4-0261-IB-mlx4-Fix-lockdep-splat-for-the-iboe-lock.patch
 
 	########################################################
 	# Wireless Networking
