--- a/series.conf
+++ b/series.conf
@@ -16646,6 +16646,7 @@
 	patches.drivers/mlx4-0040-mlx4_core-Disable-memory-windows-for-virtual-functio.patch
 	patches.drivers/mlx4-0041-mlx4_en-fix-allocation-of-device-tx_cq.patch
 	patches.drivers/mlx4-0042-mlx4_en-fix-allocation-of-CPU-affinity-reverse-map.patch
+	patches.drivers/mlx4-0043-net-mlx4_core-Disable-mlx4_QP_ATTACH-calls-from-gues.patch
 
 	########################################################
 	# Wireless Networking
