IB/mlx4: Fix bug unwinding on error in mlx4_ib_init_sriov() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16635,6 +16635,7 @@
 	patches.drivers/mlx4-0029-mlx4_en-Fix-BQL-reset-TX-queue-call-point.patch
 	patches.drivers/mlx4-0030-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 	patches.drivers/mlx4-0031-treewide-Replace-incomming-with-incoming-in-all-comm.patch
+	patches.drivers/mlx4-0032-IB-mlx4-Fix-bug-unwinding-on-error-in-mlx4_ib_init_s.patch
 
 	########################################################
 	# Wireless Networking
