--- a/series.conf
+++ b/series.conf
@@ -16701,6 +16701,7 @@
 	patches.drivers/mlx4-0095-mlx4-use-__netdev_pick_tx-instead-of-__skb_tx_hash-i.patch
 	patches.drivers/mlx4-0096-mlx4-allow-order-0-memory-allocations-in-RX-path.patch
 	patches.drivers/mlx4-0097-net-mlx4_en-Fix-resource-leak-in-error-flow.patch
+	patches.drivers/mlx4-0098-net-mlx4_en-Do-not-query-stats-when-device-port-is-d.patch
 
 	########################################################
 	# Wireless Networking
