net/mlx4_core: Add immediate activate for VGT->VST->VGT (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16744,6 +16744,7 @@
 	patches.drivers/mlx4-0138-net-mlx4_en-Fixed-crash-when-port-type-is-changed.patch
 	patches.drivers/mlx4-0139-net-mlx4_en-Add-RFS-support-in-UDP.patch
 	patches.drivers/mlx4-0140-net-mlx4_core-Initialize-all-mailbox-buffers-to-zero.patch
+	patches.drivers/mlx4-0141-net-mlx4_core-Add-immediate-activate-for-VGT-VST-VGT.patch
 
 	########################################################
 	# Wireless Networking
