net: mlx4: slight optimization of addr compare (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16766,6 +16766,7 @@
 	patches.drivers/mlx4-0160-net-mlx4_en-Ignore-irrelevant-hypervisor-events.patch
 	patches.drivers/mlx4-0161-net-mlx4_en-Add-NAPI-support-for-transmit-side.patch
 	patches.drivers/mlx4-0162-net-mlx4_core-Check-port-number-for-validity-before-.patch
+	patches.drivers/mlx4-0163-net-mlx4-slight-optimization-of-addr-compare.patch
 
 	########################################################
 	# Wireless Networking
