net/mlx4_en: Do not count LLC/SNAP in MTU calculation (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16842,6 +16842,7 @@
 	patches.drivers/mlx4-0236-net-mlx4_en-Run-loopback-test-only-when-port-is-up.patch
 	patches.drivers/mlx4-0237-net-mlx4-Verify-port-number-in-__mlx4_unregister_mac.patch
 	patches.drivers/mlx4-0238-net-mlx4_en-Do-not-disable-vlan-filter-during-promis.patch
+	patches.drivers/mlx4-0239-net-mlx4_en-Do-not-count-LLC-SNAP-in-MTU-calculation.patch
 
 	########################################################
 	# Wireless Networking
