radix-tree: fix contiguous iterator (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16820,6 +16820,7 @@
 	patches.drivers/mlx4-0214-mellanox-Logging-message-cleanups.patch
 	patches.drivers/mlx4-0215-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.fixes/radix-tree-introduce-bit-optimized-iterator.patch
+	patches.fixes/radix-tree-fix-contiguous-iterator.patch
 
 	########################################################
 	# Wireless Networking
