net/mlx4_en: Don't use irq_affinity_notifier to track changes in IRQ affinity map (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16844,6 +16844,7 @@
 	patches.drivers/mlx4-0238-net-mlx4_en-Do-not-disable-vlan-filter-during-promis.patch
 	patches.drivers/mlx4-0239-net-mlx4_en-Do-not-count-LLC-SNAP-in-MTU-calculation.patch
 	patches.drivers/mlx4-0240-net-mlx4_en-Fix-mac_hash-database-inconsistency.patch
+	patches.drivers/mlx4-0241-net-mlx4_en-Don-t-use-irq_affinity_notifier-to-track.patch
 
 	########################################################
 	# Wireless Networking
