--- a/series.conf
+++ b/series.conf
@@ -16652,6 +16652,7 @@
 	patches.drivers/mlx4-0046-net-mlx4_en-Fix-race-when-setting-the-device-MAC-add.patch
 	patches.drivers/mlx4-0047-net-mlx4_en-Cleanup-MAC-resources-on-module-unload-o.patch
 	patches.drivers/mlx4-0048-net-mlx4_en-Disable-RFS-when-running-in-SRIOV-mode.patch
+	patches.drivers/mlx4-0049-mlx4-remove-leftover-idr_pre_get-call.patch
 
 	########################################################
 	# Wireless Networking
