--- a/series.conf
+++ b/series.conf
@@ -16863,6 +16863,7 @@
 	patches.drivers/mlx4-0257-net-mlx4_en-do-not-ignore-autoneg-in-mlx4_en_set_pau.patch
 	patches.drivers/mlx4-0258-net-mlx4-Correctly-configure-single-ported-VFs-from-.patch
 	patches.drivers/mlx4-0259-net-mlx4-Use-the-correct-VSD-mask-in-UPDATE_QP.patch
+	patches.drivers/mlx4-0260-IB-mlx4-Disable-TSO-for-Connect-X-rev.-A0-HCAs.patch
 
 	########################################################
 	# Wireless Networking
