net/mlx4_en: Fix UP limit in ieee_ets->prio_tc (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16782,6 +16782,7 @@
 	patches.drivers/mlx4-0176-net-mlx4-Fix-limiting-number-of-IRQ-s-instead-of-RSS.patch
 	patches.drivers/mlx4-0177-net-mlx4_en-Expose-port-number-through-sysfs.patch
 	patches.drivers/mlx4-0178-net-mlx4_en-Fix-bad-use-of-dev_id.patch
+	patches.drivers/mlx4-0179-net-mlx4_en-Fix-UP-limit-in-ieee_ets-prio_tc.patch
 
 	########################################################
 	# Wireless Networking
