net/mlx4_core: In SR-IOV mode host should add promisc QP to default entry only (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16850,6 +16850,7 @@
 	patches.drivers/mlx4-0244-net-mlx4_core-Fix-leakage-of-SW-multicast-entries.patch
 	patches.drivers/mlx4-0245-net-mlx4_core-Make-sure-that-negative-array-index-is.patch
 	patches.drivers/mlx4-0246-net-mlx4_core-Make-sure-the-max-number-of-QPs-per-MC.patch
+	patches.drivers/mlx4-0247-net-mlx4_core-In-SR-IOV-mode-host-should-add-promisc.patch
 
 	########################################################
 	# Wireless Networking
