mlx4: Add support for CONFIG_DEV command (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16805,6 +16805,7 @@
 	patches.drivers/mlx4-0199-net-mlx4-Adapt-num_vfs-probed_vf-params-for-single-p.patch
 	patches.drivers/mlx4-0200-mlx4-Use-actual-number-of-PCI-functions-PF-VFs-for-a.patch
 	patches.drivers/mlx4-0201-net-mlx4-USe-one-wrapper-that-returns-EPERM.patch
+	patches.drivers/mlx4-0202-mlx4-Add-support-for-CONFIG_DEV-command.patch
 
 	########################################################
 	# Wireless Networking
