mlx4_core: Fix incorrect FLAGS1 bitmap test in mlx4_QUERY_FUNC_CAP (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16815,6 +16815,7 @@
 	patches.drivers/mlx4-0209-net-mlx4_core-Load-the-Eth-driver-first.patch
 	patches.drivers/mlx4-0210-net-mlx4_core-Don-t-issue-PCIe-speed-width-checks-fo.patch
 	patches.drivers/mlx4-0211-mlx4_core-Fix-memory-leaks-in-SR-IOV-error-paths.patch
+	patches.drivers/mlx4-0212-mlx4_core-Fix-incorrect-FLAGS1-bitmap-test-in-mlx4_Q.patch
 
 	########################################################
 	# Wireless Networking
