net/mlx4_core: Make sure the max number of QPs per MCG isn't exceeded (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16849,6 +16849,7 @@
 	patches.drivers/mlx4-0243-net-mlx4_en-Ignore-budget-on-TX-napi-polling.patch
 	patches.drivers/mlx4-0244-net-mlx4_core-Fix-leakage-of-SW-multicast-entries.patch
 	patches.drivers/mlx4-0245-net-mlx4_core-Make-sure-that-negative-array-index-is.patch
+	patches.drivers/mlx4-0246-net-mlx4_core-Make-sure-the-max-number-of-QPs-per-MC.patch
 
 	########################################################
 	# Wireless Networking
