net/mlx4_en: tx_info->ts_requested was not cleared (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16893,6 +16893,7 @@
 	patches.drivers/mlx4-0287-net-mlx4_en-mlx4_en_xmit-reads-ring-cons-once-and-ah.patch
 	patches.drivers/mlx4-0288-net-mlx4_en-Use-local-var-in-tx-flow-for-skb_shinfo-.patch
 	patches.drivers/mlx4-0289-net-mlx4_en-Use-local-var-for-skb_headlen-skb.patch
+	patches.drivers/mlx4-0290-net-mlx4_en-tx_info-ts_requested-was-not-cleared.patch
 
 	########################################################
 	# Wireless Networking
