--- a/series.conf
+++ b/series.conf
@@ -16672,6 +16672,7 @@
 	patches.drivers/mlx4-0066-net-mlx4_core-Read-HCA-frequency-and-map-internal-cl.patch
 	patches.drivers/mlx4-0067-net-mlx4_en-Add-HW-timestamping-TS-support.patch
 	patches.drivers/mlx4-0068-net-mlx4_en-Support-software-timestamping.patch
+	patches.drivers/mlx4-0069-net-mlx4_en-Add-a-service-task.patch
 
 	########################################################
 	# Wireless Networking
