net/mlx4: Add set VF default vlan ID and priority support (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16678,6 +16678,7 @@
 	patches.drivers/mlx4-0072-net-mlx4-Add-reference-counting-to-MAC-registeration.patch
 	patches.drivers/mlx4-0073-net-mlx4-Add-structures-to-keep-VF-Ethernet-ports-in.patch
 	patches.drivers/mlx4-0074-net-mlx4-Add-set-VF-mac-address-support.patch
+	patches.drivers/mlx4-0075-net-mlx4-Add-set-VF-default-vlan-ID-and-priority-sup.patch
 
 	########################################################
 	# Wireless Networking
