net/mlx4_core: Expose physical port id as PF/VF capability (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16760,6 +16760,7 @@
 	patches.drivers/mlx4-0154-net-mlx4_core-Remove-zeroed-out-of-explicit-QUERY_FU.patch
 	patches.drivers/mlx4-0155-net-mlx4_core-Rename-QUERY_FUNC_CAP-fields.patch
 	patches.drivers/mlx4-0156-net-mlx4_core-Introduce-nic_info-new-flag-in-QUERY_F.patch
+	patches.drivers/mlx4-0157-net-mlx4_core-Expose-physical-port-id-as-PF-VF-capab.patch
 
 	########################################################
 	# Wireless Networking
