--- a/series.conf
+++ b/series.conf
@@ -16876,6 +16876,7 @@
 	patches.drivers/mlx4-0270-net-mlx4_core-Enable-CQE-EQE-stride-support.patch
 	patches.drivers/mlx4-0271-net-mlx4_core-Cache-line-EQE-size-support.patch
 	patches.drivers/mlx4-0272-net-mlx4_en-Add-mlx4_en_get_cqe-helper.patch
+	patches.drivers/mlx4-0273-mellanox-Change-en_print-to-return-void.patch
 
 	########################################################
 	# Wireless Networking
