--- a/series.conf
+++ b/series.conf
@@ -16806,6 +16806,7 @@
 	patches.drivers/mlx4-0200-mlx4-Use-actual-number-of-PCI-functions-PF-VFs-for-a.patch
 	patches.drivers/mlx4-0201-net-mlx4-USe-one-wrapper-that-returns-EPERM.patch
 	patches.drivers/mlx4-0202-mlx4-Add-support-for-CONFIG_DEV-command.patch
+	patches.drivers/mlx4-0203-net-mlx4_core-pass-pci_device_id.driver_data-to-__ml.patch
 
 	########################################################
 	# Wireless Networking
