IB/mlx4: Convert is_xxx variables in build_mlx_header() to bool (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16640,6 +16640,7 @@
 	patches.drivers/mlx4-0034-IB-mlx4_ib-Remove-local-invalidate-segment-unused-fi.patch
 	patches.drivers/mlx4-0035-mlx4_core-Rename-MPT-related-functions-to-have-mpt_-.patch
 	patches.drivers/mlx4-0036-mlx4_core-Propagate-MR-deregistration-failures-to-ca.patch
+	patches.drivers/mlx4-0037-IB-mlx4-Convert-is_xxx-variables-in-build_mlx_header.patch
 
 	########################################################
 	# Wireless Networking
