--- a/series.conf
+++ b/series.conf
@@ -16702,6 +16702,7 @@
 	patches.drivers/mlx4-0096-mlx4-allow-order-0-memory-allocations-in-RX-path.patch
 	patches.drivers/mlx4-0097-net-mlx4_en-Fix-resource-leak-in-error-flow.patch
 	patches.drivers/mlx4-0098-net-mlx4_en-Do-not-query-stats-when-device-port-is-d.patch
+	patches.drivers/mlx4-0099-net-mlx4_en-Move-register_netdev-to-the-end-of-initi.patch
 
 	########################################################
 	# Wireless Networking
