--- a/series.conf
+++ b/series.conf
@@ -16823,6 +16823,7 @@
 	patches.fixes/radix-tree-fix-contiguous-iterator.patch
 	patches.drivers/mlx4-0218-net-mlx4_core-Enforce-irq-affinity-changes-immediatl.patch
 	patches.drivers/mlx4-0219-net-mlx4_en-User-prio-mapping-gets-corrupted-when-ch.patch
+	patches.drivers/mlx4-0220-net-mlx4_en-Fix-errors-in-MAC-address-changing-when-.patch
 
 	########################################################
 	# Wireless Networking
