--- a/series.conf
+++ b/series.conf
@@ -16814,6 +16814,7 @@
 	patches.drivers/mlx4-0208-net-mlx4_core-Adjust-port-number-in-qp_attach-wrappe.patch
 	patches.drivers/mlx4-0209-net-mlx4_core-Load-the-Eth-driver-first.patch
 	patches.drivers/mlx4-0210-net-mlx4_core-Don-t-issue-PCIe-speed-width-checks-fo.patch
+	patches.drivers/mlx4-0211-mlx4_core-Fix-memory-leaks-in-SR-IOV-error-paths.patch
 
 	########################################################
 	# Wireless Networking
