net/mlx4_en: Add RFS support in UDP (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16742,6 +16742,7 @@
 	patches.drivers/mlx4-0136-net-mlx4_core-Fix-quota-handling-in-the-QUERY_FUNC_C.patch
 	patches.drivers/mlx4-0137-net-mlx4_core-Implement-resource-quota-enforcement.patch
 	patches.drivers/mlx4-0138-net-mlx4_en-Fixed-crash-when-port-type-is-changed.patch
+	patches.drivers/mlx4-0139-net-mlx4_en-Add-RFS-support-in-UDP.patch
 
 	########################################################
 	# Wireless Networking
