IB/mlx4: Fix endless loop in resize CQ (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16749,6 +16749,7 @@
 	patches.drivers/mlx4-0143-net-mlx4_core-ICM-pages-are-allocated-on-device-NUMA.patch
 	patches.drivers/mlx4-0144-net-mlx4_en-Datapath-structures-are-allocated-per-NU.patch
 	patches.drivers/mlx4-0145-treewide-Fix-typo-in-printk.patch
+	patches.drivers/mlx4-0146-IB-mlx4-Fix-endless-loop-in-resize-CQ.patch
 
 	########################################################
 	# Wireless Networking
