--- a/series.conf
+++ b/series.conf
@@ -16615,6 +16615,7 @@
 	patches.drivers/mlx4-0009-net-mlx4_core-Directly-expose-fields-of-HW-flow-stee.patch
 	patches.drivers/mlx4-0010-net-mlx4_core-Set-correctly-allow_loopback-flag.patch
 	patches.drivers/mlx4-0011-net-mlx4_en-Fix-ip-udp-steering-rules-multicast-mac-.patch
+	patches.drivers/mlx4-0012-net-mlx4_en-Validate-VLAN-IDs-provided-in-ethtool-fl.patch
 
 	########################################################
 	# Wireless Networking
