--- a/series.conf
+++ b/series.conf
@@ -16710,6 +16710,7 @@
 	patches.drivers/mlx4-0104-net-mlx4_core-Add-warning-in-case-of-command-timeout.patch
 	patches.drivers/mlx4-0105-net-mlx4_core-Fail-device-init-if-num_vfs-is-negativ.patch
 	patches.drivers/mlx4-0106-net-mlx4_core-Dynamic-VST-to-VST-vlan-qos-changes.patch
+	patches.drivers/mlx4-0107-net-mlx4-fix-small-memory-leak-on-error.patch
 
 	########################################################
 	# Wireless Networking
