mlx4_en: fix a build error on 32bit arches (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16681,6 +16681,7 @@
 	patches.drivers/mlx4-0075-net-mlx4-Add-set-VF-default-vlan-ID-and-priority-sup.patch
 	patches.drivers/mlx4-0076-net-mlx4-Add-VF-MAC-spoof-checking-support.patch
 	patches.drivers/mlx4-0077-net-mlx4-Add-support-to-get-VF-config.patch
+	patches.drivers/mlx4-0078-mlx4_en-fix-a-build-error-on-32bit-arches.patch
 
 	########################################################
 	# Wireless Networking
