net/mlx4_core: Add missing report on VST and spoof-checking dev caps (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16690,6 +16690,7 @@
 	patches.drivers/mlx4-0084-mlx4_core-Change-a-few-DMFS-fields-names-to-match-fi.patch
 	patches.drivers/mlx4-0085-mlx4_core-Directly-expose-fields-of-DMFS-HW-rule-con.patch
 	patches.drivers/mlx4-0086-mlx4_core-Expose-a-few-helpers-to-fill-DMFS-HW-struc.patch
+	patches.drivers/mlx4-0087-net-mlx4_core-Add-missing-report-on-VST-and-spoof-ch.patch
 
 	########################################################
 	# Wireless Networking
