net/mlx4_en: Protect MAC address modification with the state_lock mutex (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16826,6 +16826,7 @@
 	patches.drivers/mlx4-0220-net-mlx4_en-Fix-errors-in-MAC-address-changing-when-.patch
 	patches.drivers/mlx4-0221-net-mlx4_core-Fix-smatch-error-possible-access-to-a-.patch
 	patches.drivers/mlx4-0222-net-mlx4_core-Removed-unnecessary-bit-operation-cond.patch
+	patches.drivers/mlx4-0223-net-mlx4_en-Protect-MAC-address-modification-with-th.patch
 
 	########################################################
 	# Wireless Networking
